--- a/.github/workflows/main_buildersshop.yml
+++ b/.github/workflows/main_buildersshop.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        working-directory: src/*.csproj
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
