--- a/.github/workflows/main_buildersshop.yml
+++ b/.github/workflows/main_buildersshop.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
-        working-directory: src/BlazorAppWithCosmosDb.csproj
+        working-directory: src\BlazorAppWithCosmosDb.csproj
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
