--- a/.github/workflows/main_buildersshop.yml
+++ b/.github/workflows/main_buildersshop.yml
@@ -26,7 +26,8 @@ jobs:
         working-directory: .\src
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/src"
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        working-directory: .\src
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
